--- a/frontend/src/css/Communitychat.css
+++ b/frontend/src/css/Communitychat.css
@@ -3,60 +3,109 @@
 * {
     font-family: "Nunito", sans-serif;
   }
+
+.comsca{
+   
+
+   
+  
+  }
 .comsssc{
-    background: rgb(247, 247, 247);
+    width: 100vw;
+    background: rgb(236, 249, 255);
     height: 60rem;
     overflow: hidden;
+    padding: 0.1px;
 }
 
-.commchat{
+.commchat{  
     position: relative;
     border-radius: 1rem; 
-    margin: auto;
-    width: 80vw;
-    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: 5vw;
+    width: 75vw;
+    margin-top: 3rem;
     background:rgb(247, 250, 255); ;
-    height: 49rem;
+    height: 42rem;
     box-shadow: 2px 2px 9px rgb(220, 220, 220);
 }
 .commchat .submitmenu{
     width: 100%;
-    bottom: 0rem;
+    bottom: 0rem;   
+    border-bottom-left-radius:0.9rem ;
   
 }
 
 .commmess{
-    height: 45rem;
+    height: 38rem;
     overflow: scroll;
     overflow-x: hidden;
+    border-top-right-radius:0.9rem;
 }
 
 .commchat .datemess{
-    margin-left: 91%;
+    font-size: 0.7rem;
+    color: rgb(216, 216, 216);
+    margin-bottom: 0;
+    margin-top: auto;
+    margin-right: 0.3rem;
+    margin-left: 0.5rem;
+    
    
  }
  .commchat .datemesss{
-    margin-left: 91%;
+    font-size: 0.7rem;
+    color: rgb(216, 216, 216);
+    margin-bottom: 0;
+    margin-top: auto;   
+    margin-right: 0.3rem;
+    margin-left: 0.5rem;
  }
+ .comssend{
+    margin: 0;
+ }
+ .flexdisp{
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+   
+}
+
+.commchat .flexdisp p{
+    max-width: 90%;
+    margin-left: 0.3rem;
+
+}
 
  #senderrole{
-    margin-left: 1rem;
+    margin-left: auto;
+    margin-right: 0;
     margin-top: -0.4rem;
     background: rgb(81, 131, 174);
     padding: 0.4rem;
-    border-radius: 1rem;
+    border-radius: 0.7rem;
  }
  #recrole{
-    margin-left: 1rem;
+    margin-left: auto;
+    margin-right: 0;
     margin-top: -0.4rem;
-    background: #1a242a;
+    background: #3e4c54;
     padding: 0.4rem;
-    border-radius: 1rem;
+    border-radius: 0.7rem;
  }
 
  .wowowow{
+    
     font-size: 1.1rem;
     display: flex;
+    margin: 0;
+    margin-top: 0.3rem;
+    
+ }
+ .wowowow p{
+    margin: 0;
+    margin-right: 1rem;
+    font-size: 1rem;
  }
 
  @media screen and (max-width: 1000px){
