--- a/frontend/src/css/PersonalChat.css
+++ b/frontend/src/css/PersonalChat.css
@@ -15,18 +15,32 @@
 * {
   font-family: "Nunito", sans-serif;
 }
-
+.perschat{
+    width: 100vw;
+    height: 100vh;
+    background: rgb(227, 247, 255);
+    padding: 0.1px;
+}
 .chatcont{
     background: rgb(252, 252, 252);
-    margin: auto;
-    width: 80vw;
+    
+    width: 82vw;
     margin-top: 2rem;
     display: flex;
     height: 45rem;
     box-shadow: 2px 2px 9px rgb(220, 220, 220);
+    margin-left: auto;
+    margin-right: 2vw;
+    border-radius: 0.9rem;
+    
+    
+}
+
+.myinfo h2{
+    margin-top: 1rem;
+    margin-left: 1rem;
+    color: rgb(0, 115, 255);
    
-    
-    
 }
 
 #profpicc{
@@ -46,6 +60,10 @@
 .chatcont .myinfo{
     height: 4rem;
     background: rgb(168, 205, 237);
+    padding: 0.1px;
+    display: flex;
+  
+    border-top-left-radius: 0.9rem;
 }
 
 .chatcont .cinfo .userss{
@@ -81,6 +99,7 @@ filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(211deg) brightness(104%
     
     width: 85%;
     border-top: 1px solid rgb(168, 205, 237);
+    
 }
 #midhr{
     margin: 0;
@@ -90,13 +109,15 @@ filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(211deg) brightness(104%
     height: 45;
     background:rgb(247, 250, 255); ;
     width: 70%;
-    
+    border-top-right-radius: 0.9rem;
+    border-bottom-right-radius: 0.9rem;
     position: relative;
 }
 
 .chatcont .seluser{
     height: 4rem;
     background: rgb(168, 205, 237);
+    border-top-right-radius: 0.9rem;
 }
 .chatcont .seluser p{
   margin: 0;
@@ -125,34 +146,63 @@ filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(211deg) brightness(104%
 .received-msg {
     
     background: #202C33;
-    overflow-wrap: break-word;
-    width: 70%;
+    
+    width: max-content;
+    max-width: 70%;
     color: rgb(255, 255, 255);
     margin-left: 1rem;
     text-align: left;
     padding: 0.5rem;
     margin-top: 1rem;
-    border-radius: 1rem;
+    border-radius: 0.9rem;
+    overflow-wrap: break-word;
+}
+.flexdisp{
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+   
 }
 
+.flexdisp p{
+    max-width: 90%;
+    margin-left: 0.3rem;
+
+}
+
+
 .sender-mess {
-    border-radius: 1rem;
+    border-radius: 0.9rem;
     padding: 0.5rem;
     margin-top: 1rem;
     background: rgb(108, 150, 187);
     overflow-wrap: break-word;
-    width: 60%;
+    max-width: 60%;
+    width: max-content;
     color: rgb(255, 255, 255);
-    margin-left:38%;
+    margin-left: auto;
+    margin-right: 1vw;
     text-align: left;
 }
 
 .datemess{
-   margin-left: 86%;
-  
+   font-size: 0.7rem;
+   color: rgb(216, 216, 216);
+   margin-bottom: 0;
+   margin-top: auto;
+   margin-right: 0.3rem;
+   margin-left: 0.5rem;
+
+   
 }
 .datemesss{
-    margin-left: 86%; 
+    font-size: 0.7rem;
+    color: rgb(216, 216, 216);
+    margin-bottom: 0;
+    margin-top: auto;   
+    margin-right: 0.3rem;
+    margin-left: 0.5rem;
+    
 }
 
 #sendbutton{
@@ -182,6 +232,7 @@ filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(211deg) brightness(104%
     padding: 0;
     display: flex;
     justify-content: space-evenly;
+    border-bottom-right-radius: 0.9rem;
 }
 .submitmenu input{
     margin-top: 0.5rem;
