--- a/frontend/src/css/Annoucement.css
+++ b/frontend/src/css/Annoucement.css
@@ -5,7 +5,7 @@
 }
 .announce{
   max-width: 100vw;
- 
+  background: #48B0DF;
 }
 
 .anccont{
@@ -32,7 +32,7 @@
   border-radius: 1px;
   margin: auto;
   width: 100vw;
-  background: #C6E6FB;
+  background: #48B0DF;
   min-height: 38vw;
   height: max-content;
   margin-top: 0rem;
@@ -57,6 +57,16 @@
   justify-content: space-between;
   margin-left: auto;
   margin-right: 2rem;
+
+}
+.andlistparent{
+  width: 80vw;
+  margin-left: auto;
+  margin-right: 2vw;
+  background: rgb(241, 249, 255);
+  border-radius: 0.9rem;
+  padding-bottom: 2rem;
+  
 
 }
 .anc .ancinfo h1{
