--- a/frontend/src/css/Appointments.css
+++ b/frontend/src/css/Appointments.css
@@ -204,6 +204,7 @@
   width: 70%;
   min-height: 3rem;
   margin-top: 1rem;
+  border-radius: 0.9rem;
 }
 
 .bookForm input:hover{
@@ -358,10 +359,23 @@ font-size: 1.7rem;
   box-shadow: 2px 2px 9px rgb(220, 220, 220);
 }
 .feedbackvalue .inputs{
+  display: flex;
+  justify-content: start;
   width: 90%;
   margin: auto;
   margin-top: 1rem;
 }
+.feedbackvalue .inputs p{
+  width: 20%;
+}
+.feedbackvalue .inputs select{
+  border: none;
+  border: 2px solid rgb(0, 149, 255);
+  border-radius: 0.9rem;
+  width: 70%;
+  text-align: center;
+}
+
 .feedbackvalue input{
   background: #e8f7fb;
   width: 70%;
@@ -442,22 +456,62 @@ font-size: 1.7rem;
    position: relative;
    margin: auto;
   }
+  .appointments-container  h2{
+      text-align: left;
+      font-size: 1.7rem;
+      margin-left: 1.5rem;
+      color: #0b76a7;
+  }
 
   .appointments-container{
-      width: 85vw;
+      width: 82vw;
       margin: auto;
-      background: rgb(253, 253, 253);
+      margin-top: 2rem;
+      border-radius: 0.9rem;
+      background: rgb(225, 243, 255);
       min-height: 10rem;
       height: max-content;
       padding-top: 1rem;
       padding-bottom: 2rem;
       
   }
+  .dispflexbook{
+    display: flex;
+    justify-content: space-evenly;
+
+  }
+  .dispflexbook p {
+    font-weight: 700;
+    padding-top: 1rem;
+  }
+  #doctor_id{
+    display: none;
+  }
+  #docaphead{
+    color: #0083c5;
+    font-weight: 700;
+    height: 1rem;
+  }
+  #docaphead p{
+      margin-top: auto;
+      margin-bottom: 0;
+  }
+  .appointments-container ul{
+      background: white;
+      width: 92%;
+      margin: auto;
+      border-radius: 0.9rem;
+      padding-left: 0;
+      padding-bottom: 2rem;
+  }
+  .appointments-container ul hr{
+    width: 85%;
+  }
   .appointments-container ul li{
     border-radius: 2px;
     min-height: 4rem;
     background: white;
-    box-shadow: 2px 2px 9px rgb(230, 230, 230);
+ 
     height: max-content;
     width: 85%;
     display: flex;
@@ -465,16 +519,14 @@ font-size: 1.7rem;
     margin: auto;
     
   }
+  .accrejbut{
+      margin-top: 0;
+      margin-bottom: 0;
+      display: flex;
+
+  }
   .appointments-container ul li:hover{
-    border-radius: 2px;
-    min-height: 4rem;
-    background: white;
-    box-shadow: 2px 2px 9px rgb(181, 224, 220);
-    height: max-content;
-    width: 86%;
-    display: flex;
-    justify-content: space-evenly;
-    margin: auto;
+    
   }
   .appointments-container ul li .button-53{
     background-color: #b7ffec;
@@ -491,8 +543,8 @@ font-size: 1.7rem;
     text-align: center;
     text-decoration: none #000000 solid;
     text-decoration-thickness: auto;
-    width: 15%;
-    max-width: 20%;
+    width: 50%;
+    max-width:50%;
     position: relative;
     cursor: pointer;
     user-select: none;
@@ -502,9 +554,10 @@ font-size: 1.7rem;
     
     margin-top: 0rem;
     margin: auto;
+    margin-left: 1rem;
   }
   .appointments-container ul li p{
-    width: 20%;
+    width: 20vw;
   }
   @media screen and (max-width: 1000px) {
     .doctor .doctordetail h1{
@@ -582,6 +635,7 @@ font-size: 1.7rem;
       text-align: center;
       width: 80%;
       min-height: 3rem;
+      
       margin-top: 1rem;
     }
     
