--- a/frontend/src/css/PersonalChat.css
+++ b/frontend/src/css/PersonalChat.css
@@ -106,7 +106,7 @@ filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(211deg) brightness(104%
     padding: 0;
 }
 .chatcont .selchat{
-    height: 45;
+    height: 40rem;
     background:rgb(247, 250, 255); ;
     width: 70%;
     border-top-right-radius: 0.9rem;
