--- a/frontend/src/css/Tasks.css
+++ b/frontend/src/css/Tasks.css
@@ -1,4 +1,4 @@
-.task .allCards{
+/* .task .allCards{
 
     height: 100vh;
     
@@ -10,7 +10,7 @@
 
 .task #title{
     width: 20vw;
-}
+} */
 
 @media screen and (max-width: 1000px){
     
