--- a/frontend/src/css/Annoucement.css
+++ b/frontend/src/css/Annoucement.css
@@ -96,7 +96,7 @@
 }
 
 .anc .formancc{
-  background:  #73c2fbc5;
+  background: #48B0DF;
   width: 100vw;
   padding: 0.1px;
   height: 36rem;
@@ -228,11 +228,15 @@ background: white;
   width: 30vw;
   height: max-content;
   box-shadow: 2px 2px 8px rgb(213, 213, 213);
-
   margin: auto;
   margin-top: 2rem;
   margin-bottom: 2rem;
   border-radius: 0.5rem;
+}
+.Formcont{
+  width: 82vw;
+  margin-left: auto;
+  margin-right: 2vw;
 }
 
 .Formcont .button-53{
