--- a/frontend/src/css/Orders.css
+++ b/frontend/src/css/Orders.css
@@ -4,8 +4,75 @@
   font-family: "Nunito", sans-serif;
 }
 
-.Card {
-  border-radius: 10px;
+.orderbody .bodyy{
+  background: #48b0df;
+  padding: 0.1px;
+  height: max-content;
+  min-height: 95vh
+  
+}
+.OCards hr{
+  width: 92%;
+  border: 1.5px solid rgb(230, 230, 230);
+ 
+}
+
+#mainhe{
+  width: 95%;
+  border: 2px solid #48b0df;;
+}
+
+.orderspage{
+    width: 82vw;
+    margin-left: auto;
+    margin-right: 2vw;
+    background: white;
+    padding: 0.1px;
+    margin-top: 2rem;
+    border-radius: 0.9rem;
+    margin-bottom: 2rem;
+}
+.orderspage h1{
+    font-size: 1.7rem;
+    text-align: left;
+    color: #48b0df;
+    margin-top: 1rem;
+    margin-left: 2rem;
+}
+.orderspage .filterOptions{
+    display: flex;
+    justify-content: space-between;
+    padding: 0.1px;
+    margin-bottom: 1rem;
+}
+.orderspage .filterOptions .search-filter{
+    width: 75%;
+    margin-left: 2rem;
+    background: #ddf4ff;
+    border-radius: 0.9rem;
+    height: 3rem;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.orderspage .filterOptions .search-filter:focus{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.orderspage .filterOptions .filter-select{
+    width: 15%;
+    margin-right: 5rem;
+    
+}
+.orderspage .sada{
+    background: rgb(248, 248, 248);
+    min-height: 3rem;
+    border-radius: 0.9rem;
+    margin-bottom: 1rem;
+    width: 20vw;
+    margin: auto;
+    display: flex;
+    justify-content: space-evenly;
+
 }
 /* .donate {
   background-repeat: no-repeat;
@@ -72,15 +139,9 @@
 }
 .allCards {
   
-  width: 100vw;
+  width: 100%;
   margin: auto;
   height: max-content;
-  background: rgb(241, 251, 255);
-  background-image: url("../../public/list.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position:top right;
-  background-attachment: fixed;
   position: relative;
   padding: 1px;
   
@@ -88,7 +149,7 @@
 .OCards {
   font-size: 1rem;
   position: relative;
-  width: 85vw;
+  width: 100%;
   margin: auto;
   height: max-content;
   margin-top:2rem;
@@ -106,13 +167,11 @@
   font-weight: 700;
   justify-content: center;
   line-height: 1.75rem;
-  padding: .75rem 1.65rem;
   position: relative;
   text-align: center;
   text-decoration: none #000000 solid;
   text-decoration-thickness: auto;
-  width: 10%;
-  max-width: 10%;
+  width: 80%;
   position: relative;
   cursor: pointer;
   user-select: none;
@@ -120,17 +179,18 @@
   touch-action: manipulation;
   text-align: center;
   margin: auto;
-  margin-left: 0;
+  
   
 }
 
+
 .OCards .card {
-  margin:0 ;
+ 
   max-width: 100%;
-  width: 100%;
+  width: 99%;
+  margin: auto;
   border: none;
-  background: white;
-  box-shadow: 1px 1px 8px #d0d0d0;
+ 
   
 }
 
@@ -139,12 +199,13 @@
   outline: none;
   border: none;
   display: flex;
-  border-radius: 10px;
+  padding: 0.1px;
+  
   
 }
 .OCards .card-body:hover {
+
  
-  box-shadow: 6px 2px 11px #a5a5a5;
   
 }
 .OCards .card-body:hover {
@@ -162,7 +223,11 @@
 }
 
 .OCards p{  
-  width: 15vw;
+  width: 11vw;
+  padding: 1rem;
+  text-align: center;
+  line-height: 4rem;
+  margin: 0;
 } 
 
 .OCards .content-details{
@@ -174,18 +239,16 @@
 }
 
 .heading{
-  box-shadow: 2px 2px 8px #bababa;
   height: max-content;
-  width: 85vw;
+  width: 99%;
   font-size: 1.3rem;
-  font-weight: 600;
+  font-weight: 700;
   outline: none;
+  margin: auto;
   border: none;
   display: flex;
   justify-content: flex-start;
-  background: #00BFBA;
-  border-radius: 1rem;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 .heading img{
   padding-left: 1rem;
@@ -195,21 +258,14 @@
   
 }
 #action{
-  width: 8vw;
+  width: 11vw;
 }
 
 #title{
-  
-  font-size: 1.1rem;
-  font-weight: 600;
-  margin: 1rem;
-  border-radius: 1rem;
-
-  height: 2.5rem;
-  padding-top: 1rem;
  
-  width: 14vw;
-}
+  font-weight: 700;
+
+} 
 
 #title img{
   width: 1.5rem;
