--- a/frontend/src/css/Tasks.css
+++ b/frontend/src/css/Tasks.css
@@ -15,7 +15,7 @@
     width: 82vw;
     margin-right: 2vw;
     margin-left: auto;
-    background: #C6E6FB;
+    background: white;
     margin-top: 2rem;
     border-radius: 0.9rem;
     padding: 0.1px;
