--- a/frontend/src/css/Donate.css
+++ b/frontend/src/css/Donate.css
@@ -284,6 +284,11 @@ input {
   text-align: left;
 }
 
+.leftrightfunc{
+  height: 1rem;
+  padding-top: 1rem;
+}
+
 @media screen and (max-width: 1000px) {
   .donate_content {
     width: 90%;
